# toons

./: .gitignore  MANIFEST.in  README.md  build.zig  build.zig.zon  pyproject.toml  setup.py
.github/workflows/: build.yml  ci.yml
benchmarks/: benchmark_roundtrip.py
src/toons/: __init__.py  __main__.py  _build_zig.py  _ffi.py  options.py  text.py
src/toons.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/toonz/: __main__.py  _build_zig.py  _normalize.py  api.py  codecs.py  inspection.py  pack.py  schema.py  stream.py  text.py
tests/: test_toons.py
zig/: text_format.zig  toons.zig  toonz.zig
